# yanki

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  README.adoc  README.md  REFERENCE.adoc  REFERENCE.md  cards.csv  check-asl.sh  example-deck.txt  find-duplicates.sh  generate-summary.sh  pyproject.toml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: pr-checks.yaml  uv-sync.yaml
asl/: .ignore  README.adoc  README.md  extra-full-pages.deck  extra-lesson.deck  extra-miscellaneous.deck  extra.deck  lesson-01-phrases.deck  lesson-01.deck  lesson-02-phrases.deck  lesson-02.deck  lesson-03-phrases.deck  lesson-03.deck  lesson-04-phrases.deck  lesson-04.deck  lesson-05-phrases.deck  lesson-05.deck  lesson-06-phrases.deck  lesson-06.deck  lesson-07-phrases.deck  lesson-07.deck  lesson-08-phrases.deck  lesson-08.deck  lesson-09-phrases.deck  lesson-09.deck  lesson-10-phrases.deck  lesson-10.deck  lesson-11-phrases.deck  lesson-11.deck  lesson-12-phrases.deck  lesson-12.deck  lesson-13-phrases.deck  lesson-13.deck  lesson-14-phrases.deck  lesson-14.deck  lesson-15-phrases.deck  lesson-15.deck  lesson-16-phrases.deck  lesson-16.deck  lesson-17-phrases.deck  (+65 more)
demo/: README.md  asl-alphabet.deck  asl-fingerspelled-words.deck  asl-months.deck
downloader/: __init__.py  anki.py  build_deck.py  video.py
test-decks/: bidirectional.deck  mp3.deck  overlay_text.deck  slow.deck  tags.deck
test-decks/errors/: bad-audio-config.deck  bad-clip-long.deck  bad-clip-short.deck  bad-crop.deck  bad-indent.deck  bad-note_id.deck  bad-scheme.deck  bad-tag-mix.deck  duplicate-note.deck  empty-title.deck  no-title.deck  slow-too-fast.deck  trim-and-clip.deck
test-decks/good/: bidirectional.deck  config.deck  overlay_text.deck  slow.deck  tags.deck
test-decks/good/media/: README.adoc  README.md
tests/: cache_test.py  cli_test.py  conftest.py  filter_test.py  html_test.py  note_test.py  package_test.py  raw_to_html_test.py  syntax_test.py  test-decks_test.py  test-mp3.deck  test-slow.deck  test_decks_errors.py  test_raw_to_html.py  test_test-decks.py  test_url_finder.py  test_url_to_id.py  test_video_parameters.py  url_finder_test.py  url_regex_test.py  url_to_id_test.py  util_test.py  video_parameters_test.py  web_summary_test.py
web-files/: flash-cards.css  flash-cards.js  flashcards.css  flashcards.js  general.css
web-files/static/: flashcards.css  flashcards.js  general.css
web-files/templates/: flashcards.html
yanki/: anki.py  cache.py  cli.py  errors.py  field.py  filter.py  html.py  html_out.py  json.py  parser.py  server.py  tree.py  utils.py  video.py
yanki/cache/: __init__.py  entry.py  resolvable.py
yanki/cli/: __init__.py  decks.py  server.py
yanki/parser/: __init__.py  config.py  model.py  parser.py
yanki/web/: __init__.py  summary.py  ui.py
yanki/web/summary/: __init__.py
