[project]
name = "yanki"
version = "0.1.0"
description = "Build Anki decks from text files containing YouTube URLs."
authors = [{name = "Daniel Parks", email = "dp+git@oxidized.org"}]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "yt-dlp >=2024.11.4",
    "genanki >=0.13.1,<0.14",
    "docutils >=0.21.2,<0.22",
    "ffmpeg-python >=0.2.0,<0.3",
    "colorlog >=6.9.0,<7.0",
    "click >=8.1.8,<9.0",
    "mistletoe>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "ruff>0.8.4",
    "pre-commit>=4.0.1,<5",
    "pytest-console-scripts>=1.4.1,<2",
    "psutil>=6.1.1,<7",
]

[project.scripts]
yanki = "yanki.cli:main"

[tool.pytest.ini_options]
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# E: https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
# F: https://docs.astral.sh/ruff/rules/#pyflakes-f
# I: https://docs.astral.sh/ruff/rules/#isort-i
# N: https://docs.astral.sh/ruff/rules/#pep8-naming-n
# PERF: https://docs.astral.sh/ruff/rules/#perflint-perf
# RUF: https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
select = ["E", "F", "I", "N", "PERF", "RUF"]

# RUF001 – RUF003: I frequently use characters that trigger these lints like "’"
# and "❯".
ignore = ["RUF001", "RUF002", "RUF003", "RUF009", "RUF015", "RUF022"]

[tool.hatch.build.targets.wheel]
packages = ["yanki"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
