[project]
name = "yanki"
version = "0.1.0"
description = "Build Anki decks from text files containing YouTube URLs."
authors = [{name = "Daniel Parks", email = "dp+git@oxidized.org"}]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    "yt-dlp >=2024.11.4",
    "genanki >=0.13.1,<0.14",
    "docutils >=0.21.2,<0.22",
    "ffmpeg-python >=0.2.0,<0.3",
    "colorlog >=6.9.0,<7.0",
    "click >=8.1.8,<9.0",
    "mistletoe>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
    "ruff>0.8.4",
    "pre-commit>=4.0.1,<5",
    "pytest-console-scripts>=1.4.1,<2",
    "psutil>=6.1.1,<7",
]

[project.scripts]
yanki = "yanki.cli:main"

[tool.pytest.ini_options]
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 80

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "B",
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E",
    # https://docs.astral.sh/ruff/rules/#eradicate-era,
    "ERA",
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F",
    # https://docs.astral.sh/ruff/rules/#refurb-furb
    "FURB",
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I",
    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "N",
    # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PERF",
    # https://docs.astral.sh/ruff/rules/#pylint-pl
    "PL",
    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "RUF",
    # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "TRY",
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP",
]

ignore = [
    # `functools.cache` can leak memory: FIXME, I guess.
    "B019",
    # A lot of “magic” values are easier to understand without a CONSTANT.
    "PLR2004",
    # I like to shadow `for` loop variables.
    "PLW2901",
    # Ignore too many returns.
    "PLR0911",
    # I frequently use characters that trigger these lints like "’"  and "❯".
    "RUF001", "RUF002", "RUF003",
    # It’s a lot more work to have separate error classes.
    "TRY003",
    # I prefer to be explicit about opening files for reading.
    "UP015",
]

[tool.hatch.build.targets.wheel]
packages = ["yanki"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
